crates/cli/tests/snapshots/snapshot__interfaces_view_snapshot.snap
---
source: crates/cli/tests/snapshot.rs
expression: output
---
       No WIT interfaces detected in local WASM files.

                    Press 'r' to refresh.
