crates/cli/tests/snapshots/snapshot__interfaces_view_with_entries_snapshot.snap
---
source: crates/cli/tests/snapshot.rs
expression: output
---
Interface                             Type            Version         Source File
wasi:cli/command                      Dependency      0.2.0           component.wasm
wasi:http/proxy                       Dependency      0.2.0           component.wasm
my-component                          Component       1.0.0           component.wasm
wasi:filesystem/types                 Dependency      0.2.0           example.wasm
core-module                           Module          -               example.wasm













 ↑↓  Navigate   Enter  View details   r  Refresh
