crates/cli/tests/snapshots/snapshot__local_view_empty_snapshot.snap
---
source: crates/cli/tests/snapshot.rs
expression: output
---
                No local WASM files detected.

                    Press 'r' to refresh.
