crates/cli/tests/snapshots/snapshot__local_view_snapshot.snap
---
source: crates/cli/tests/snapshot.rs
expression: output
---
            ▖  ▖       ▐▘▗ ▜
            ▌▞▖▌▀▌▛▘▛▛▌▐ ▜ ▐
            ▛ ▝▌█▌▄▌▌▌▌▐ ▟▖▐
                       ▝▘  ▀
