crates/cli/tests/snapshots/snapshot__packages_view_filter_with_results_snapshot.snap
---
source: crates/cli/tests/snapshot.rs
expression: output
---
┌ Filter ──────────────────────────────────────────────────────────────────────────────────────────┐
│wasi                                                                                              │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
Repository                 Registry             Tag             Size         Digest
bytecode-alliance/wasi-htt ghcr.io              v0.2.0          256.00 KB    wasi123






 /  Filter   p  Pull   d  Delete   Enter  View details   Esc  Clear
